# mlstacks

./: .coderabbit.yaml  .gitbook.yaml  .gitignore  .typos.toml  CONTRIBUTING.md  README.md  mint.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: aws-integration-test.yml  ci.yml  codeql.yml  deploy-self-hosted-runner.yml  deploy-test-runner.yml  destroy-self-hosted-runner.yml  destroy-test-runner.yml  lint-unit-test.yml  (+5 more)
aws-airflow/: README.md  locals.tf  metadata.yaml  mwaa.tf  network.tf  output_file.tf  outputs.tf  requirements.txt  s3.tf
aws-kubeflow-kserve/: README.md  aws_account.tf  eks.tf  get_URIs.tf  kserve.tf  kubeflow.tf  kubernetes.tf  locals.tf  metadata.yaml  mlflow.tf  output_file.tf  outputs.tf  terraform.tf  values.tfvars.json  variables.tf  vpc.tf
aws-kubeflow-seldon/: README.md  get_URIs.tf  kubeflow.tf  locals.tf  output_file.tf  seldon.tf
aws-minimal/: README.md  configure_docker.tf  configure_kubectl.tf  destroy_recipe.sh  ecr.tf  eks.tf  get_URIs.tf  helm.tf  locals.tf  metadata.yaml  mlflow.tf  output_file.tf  outputs.tf  rds.tf  run_recipe.sh  s3.tf  seldon.tf  terraform.tf  values.tfvars  variables.tf  vpc.tf
aws-modular/: README.md  cert_manager.tf  configure_docker.tf  configure_kubectl.tf  ecr.tf  eks.tf  get_cluster.sh  get_cluster_info.sh  helm.tf  istio.tf  kserve.tf  kubeflow.tf  kubernetes.tf  locals.tf  mlflow.tf  nginx_ingress.tf  output_file.tf  outputs.tf  s3.tf  sagemaker.tf  seldon.tf  tekton.tf  terraform.tf  variables.tf  vpc.tf  zenml.tf
aws-stores-minimal/: README.md  destroy_recipe.sh  ecr.tf  locals.tf  metadata.yaml  output_file.tf  outputs.tf  run_recipe.sh  s3.tf  terraform.tf  values.tfvars  values.tfvars.json  variables.tf
azure-minimal/: .gitignore  README.md  aks.tf  blob_storage.tf  configure_docker.tf  configure_kubectl.tf  container_registry.tf  destroy_recipe.sh  get_URIs.tf  helm.tf  key_vault.tf  kubernetes.tf  locals.tf  metadata.yaml  mlflow.tf  mysql_flexible.tf  output_file.tf  outputs.tf  rg.tf  run_recipe.sh  seldon.tf  terraform.tf  values.tfvars  values.tfvars.json  variables.tf  vpc.tf
azureml-minimal/: README.md  access_policy.tf  blob_storage.tf  cluster.tf  key_vault.tf  locals.tf  metadata.yaml  mysql_flexible.tf  output_file.tf  outputs.tf  service_principal.tf  terraform.tf  values.tfvars.json  variables.tf
docs/: README.md  What is MLOps Stacks?.md  toc.md
eks-s3-seldon-mlflow/: README.md  aws_account.tf  eks.tf  get_URIs.tf  helm.tf  kubernetes.tf  locals.tf  mlflow.tf  output_file.tf  outputs.tf  rds.tf  run_recipe.sh  s3.tf  terraform.tf  variables.tf  vpc.tf
gcp-airflow/: README.md  composer.tf  configure_kubectl.tf  enable_services.tf  locals.tf  metadata.yaml  output_file.tf  outputs.tf  terraform.tf  values.tfvars.json  variables.tf
gcp-annotation/: README.md  enable_services.tf  locals.tf  output_file.tf  outputs.tf  service-account.tf  terraform.tf  values.tfvars.json  variables.tf
gcp-full/: cert_manager.tf  istio.tf  kubeflow.tf  locals.tf  mlflow.tf  nginx_ingress.tf  outputs.tf  seldon.tf  values.tfvars.json  variables.tf  zenml.tf
gcp-kubeflow-kserve/: README.md  cloudsql.tf  configure_kubectl.tf  enable_services.tf  gcp_kubeflow_stack_2022-08-10T13_58.yml  gcs.tf  get_URIs.tf  gke.tf  helm.tf  kserve.tf  kubeflow.tf  kubernetes.tf  locals.tf  metadata.yaml  mlflow.tf  output_file.tf  outputs.tf  service-account.tf  values.tfvars.json  variables.tf  vpc.tf
gcp-minimal/: README.md  artifact_repository.tf  configure_kubectl.tf  destroy_recipe.sh  enable_services.tf  get_URIs.tf  gke.tf  helm.tf  kubernetes.tf  locals.tf  metadata.yaml  mlflow.tf  output_file.tf  outputs.tf  run_recipe.sh  seldon.tf  terraform.tf  values.tfvars  values.tfvars.json  variables.tf  vpc.tf
gcp-modular/: .gitignore  README.md  cert_manager.tf  configure_docker.tf  configure_kubectl.tf  enable_services.tf  gcs.tf  get_cluster.sh  gke.tf  helm.tf  istio.tf  kserve.tf  kubeflow.tf  kubernetes.tf  locals.tf  metadata.yaml  mlflow.tf  nginx_ingress.tf  output_file.tf  outputs.tf  seldon.tf  tekton.tf  terraform.tf  variables.tf  vertex.tf  vpc.tf  zenml.tf
gcp-vertexai/: .gitignore  README.md  configure_docker.tf  configure_kubectl.tf  container_repository.tf  enable_services.tf  get_URIs.tf  gke.tf  helm.tf  kubernetes.tf  locals.tf  metadata.yaml  mlflow.tf  output_file.tf  outputs.tf  terraform.tf  values.tfvars.json  variables.tf  vertex.tf  vpc.tf
gke-gcs-seldon-mlflow/: README.md  artifact_repository.tf  cleanup.sh  cloudsql.tf  configure_kubectl.tf  ecr.tf  enable_services.tf  gcs.tf  get_URIs.tf  gke.tf  helm.tf  locals.tf  mlflow.tf  output_file.tf  outputs.tf  seldon.tf  service-account.tf  terraform.tf  values.tfvars  variables.tf  vpc.tf
infrastructure/: deploy.tf  terraform.tf  variables.tf
k3d-full/: README.md  istio.tf  k3d.tf  kubeflow.tf  locals.tf  minio.tf  mlflow.tf  nginx_ingress.tf  output_file.tf
k3d-minimal/: README.md  helm.tf  k3d.tf  kubeflow.tf  kubernetes.tf  locals.tf  metadata.yaml  minio.tf  output_file.tf  outputs.tf  terraform.tf  values.tfvars.json  variables.tf
k3d-modular/: README.md  cert_manager.tf  helm.tf  istio.tf  k3d.tf  kserve.tf  kubeflow.tf  kubernetes.tf  locals.tf  metadata.yaml  minio.tf  mlflow.tf  nginx_ingress.tf  output_file.tf  output_stack.tf  output_test_harness_cfg.tf  outputs.tf  seldon.tf  tekton.tf  terraform.tf  values.tfvars.json  variables.tf
scripts/: check-spelling.sh  docstring.sh  format.sh  lint.sh  publish.sh  run-tests.sh
tests/: test_constants.py  test_utils.py
use-cases/: for-mlops-platform-engineers.md
vertex-ai/: .gitignore  README.md  cloudsql.tf  configure_kubectl.tf  destroy_recipe.sh  enable_services.tf  get_URIs.tf  gke.tf  helm.tf  kubernetes.tf  locals.tf  metadata.yaml  mlflow.tf  output_file.tf  outputs.tf  run_recipe.sh  service-account.tf  terraform.tf  values.tfvars  values.tfvars.json  variables.tf  vertex.tf  vpc.tf
vertex-ai-example/: README.md  enable_services.tf  locals.tf  outputs.tf  service-account.tf  terraform.tf  values.tfvars  variables.tf
(+362 files in other folders)
